Personalized Quasi Final

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,29 @@
----
----
+
+@article{oh2021gradient,
+  title={Gradient flows on graphons: existence, convergence, continuity equations},
+  author={Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi, Raghav},
+  journal={arXiv preprint arXiv:2111.09459},
+  year={2021}
+}
+
+@article{harchaoui2022stochastic,
+  title={Stochastic optimization on matrices and a graphon McKean-Vlasov limit},
+  author={Harchaoui, Zaid and Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi, Raghavendra},
+  journal={arXiv preprint arXiv:2210.00422},
+  year={2022}
+}
+
+
+@article{korssjoen2022finding,
+  title={Finding structure in sequences of real numbers via graph theory: a problem list},
+  author={Korssjoen, Dana G and Li, Biyao and Steinerberger, Stefan and Tripathi, Raghavendra and Zhang, Ruimin},
+  journal={Involve, a Journal of Mathematics},
+  volume={15},
+  number={2},
+  pages={251--270},
+  year={2022},
+  publisher={Mathematical Sciences Publishers}
+}
+
 
 
