--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,6 @@
-
 @article{oh2021gradient,
   title={Gradient flows on graphons: existence, convergence, continuity equations},
-  author={Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi, Raghav},
+  author={Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi, Raghavendra},
   journal={arXiv preprint arXiv:2111.09459},
   year={2021}
 }
@@ -23,6 +22,13 @@
   pages={251--270},
   year={2022},
   publisher={Mathematical Sciences Publishers}
+}
+
+@article{ottolini2023central,
+  title={Central limit theorem in complete feedback games},
+  author={Ottolini, Andrea and Tripathi, Raghavendra},
+  journal={arXiv preprint arXiv:2303.15601},
+  year={2023}
 }
 
 
