--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,10 @@
 @article{oh2021gradient,
   title={Gradient flows on graphons: existence, convergence, continuity equations},
   author={Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi, Raghavendra},
-  journal={arXiv preprint arXiv:2111.09459},
-  year={2021}
+  journal={Journal of Theoretical Probability},
+  pages={1--54},
+  year={2023},
+  publisher={Springer}
 }
 
 @article{harchaoui2022stochastic,
@@ -31,5 +33,10 @@
   year={2023}
 }
 
-
+@article{dudarov2023image,
+  title={On the image of graph distance matrices},
+  author={Dudarov, William and Feinberg, Noah and Guo, Raymond and Goh, Ansel and Ottolini, Andrea and Stepin, Alicia and Tripathi, Raghavenda and Zhang, Joia},
+  journal={arXiv preprint arXiv:2307.04740},
+  year={2023}
+}
 
