--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@
 @article{korssjoen2022finding,
   title={Finding structure in sequences of real numbers via graph theory: a problem list},
   author={Korssjoen, Dana G and Li, Biyao and Steinerberger, Stefan and Tripathi, Raghavendra and Zhang, Ruimin},
-  journal={Involve, a Journal of Mathematics},
+  journal={Involve, A Journal of Mathematics},
   volume={15},
   number={2},
   pages={251--270},
