--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,7 +35,7 @@
 
 @article{dudarov2023image,
   title={On the image of graph distance matrices},
-  author={Dudarov, William and Feinberg, Noah and Guo, Raymond and Goh, Ansel and Ottolini,  Andrea and Stepin,  Alicia and Tripathi,  Raghavenda and Zhang, Joia},
+  author={Dudarov, William and Feinberg, Noah and Guo, Raymond and Goh, Ansel and Ottolini,  Andrea and Stepin,  Alicia and Tripathi, Raghavendra and Zhang, Joia},
   journal={arXiv preprint arXiv:2307.04740},
   year={2023}
 }
