--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,3 +40,12 @@
   year={2023}
 }
 
+@article{sharma2015extension,
+  title={Extension of the Josephus problem with varying elimination steps},
+  author={Sharma, Shivam and Tripathi, Raghavendra and Bagai, Shobha and Saini, Rajat and Sharma, Natasha},
+  journal={DU Journal of Undergraduate Research and Innovation},
+  volume={1},
+  number={3},
+  pages={211--218},
+  year={2015}
+}
