--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@
 @article{ottolini2023central,
   title={Central limit theorem in complete feedback games},
   author={Ottolini, Andrea and Tripathi,  Raghavendra},
-  journal={arXiv preprint arXiv:2303.15601},
+  journal={To appear in Advances in Applied Probability; arXiv:2303.15601},
   year={2023}
 }
 
