--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,13 @@
+@misc{athreya2023path,
+      title={Path convergence of Markov chains on large graphs}, 
+      author={Siva Athreya and Soumik Pal and Raghav Somani and Raghavendra Tripathi},
+      year={2023},
+      eprint={2308.09214},
+      archivePrefix={arXiv},
+      primaryClass={math.PR}
+}
+
+
 @article{oh2021gradient,
   title={Gradient flows on graphons: existence, convergence, continuity equations},
   author={Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi, Raghavendra},
