--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,8 +39,8 @@
 @article{ottolini2023central,
   title={Central limit theorem in complete feedback games},
   author={Ottolini, Andrea and Tripathi,  Raghavendra},
-  journal={To appear in Advances in Applied Probability; arXiv:2303.15601},
-  year={2023}
+  journal={To appear in Journal of Applied Probability; arXiv:2303.15601},
+  year={2024}
 }
 
 @article{dudarov2023image,
