--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
       author={Siva Athreya and Soumik Pal and Raghav Somani and Raghavendra Tripathi},
       year={2023},
       eprint={2308.09214},
-      archivePrefix={arXiv},
+      journal={arXiv:2308.09214},
       primaryClass={math.PR}
 }
 
