--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,12 +36,12 @@
   publisher={Mathematical Sciences Publishers}
 }
 
-@article{ottolini2023central,
-  title={Central limit theorem in complete feedback games},
-  author={Ottolini, Andrea and Tripathi,  Raghavendra},
-  journal={To appear in Journal of Applied Probability; arXiv:2303.15601},
-  year={2023}
-}
+
+@article{ottolini2023central, 
+title={Central limit theorem in complete feedback games}, 
+DOI={10.1017/jpr.2023.64}, 
+journal={Journal of Applied Probability}, publisher={Cambridge University Press}, 
+author={Ottolini, Andrea and Tripathi, Raghavendra}, year={2023}, pages={1–13}}
 
 @article{dudarov2023image,
   title={On the image of graph distance matrices},
