--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,10 @@
+@article{tripathi2023two,
+  title={Two-color exchangeability does not imply exchangeability},
+  author={Tripathi, Raghavendra},
+  journal={arXiv preprint arXiv:2310.01750},
+  year={2023}
+}
+
 @misc{athreya2023path,
       title={Path convergence of Markov chains on large graphs}, 
       author={Siva Athreya and Soumik Pal and Raghav Somani and Raghavendra Tripathi},
