--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,14 @@
+@article{KRT2024,
+      title={Douglas-Rudin approximation theorem for operator-valued functions on the unit ball of $\mathbb{C}^d$}, 
+      author={Poornendu Kumar and Shubham Rastogi and Raghavendra Tripathi},
+      year={2024},
+      eprint={2403.16401},
+      journal={arXiv:2403.16401},
+      \primaryclass={math.FA},
+}
+
+
+
 @article{tripathi2023two,
   title={Two-color exchangeability does not imply exchangeability},
   author={Tripathi, Raghavendra},
@@ -5,7 +16,7 @@
   year={2023}
 }
 
-@misc{athreya2023path,
+@article{athreya2023path,
       title={Path convergence of Markov chains on large graphs}, 
       author={Siva Athreya and Soumik Pal and Raghav Somani and Raghavendra Tripathi},
       year={2023},
@@ -65,3 +76,5 @@ author={Ottolini, Andrea and Tripathi, Raghavendra}, year={2023}, pages={1–13}
   pages={211--218},
   year={2015}
 }
+
+
