--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
       year={2024},
       eprint={2403.16401},
       journal={arXiv:2403.16401},
-      \primaryclass={math.FA},
+      primaryclass={math.FA},
 }
 
 
