--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,15 +3,14 @@
       author={Poornendu Kumar and Shubham Rastogi and Raghavendra Tripathi},
       year={2024},
       eprint={2403.16401},
-      journal={arXiv:2403.16401},
-      primaryclass={math.FA},
+      journal={arXiv:2403.16401}
 }
 
 
 
 @article{tripathi2023two,
   title={Two-color exchangeability does not imply exchangeability},
-  author={Tripathi, Raghavendra},
+  author={Tripathi,  Raghavendra},
   journal={arXiv preprint arXiv:2310.01750},
   year={2023}
 }
