--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,9 +1,17 @@
+
+@article{KRT2024,
+      title={On log-concavity of the number of orbits in commuting tuples of permutations}, 
+      author={Raghavendra Tripathi},
+      year={2024},
+      journal={To appear in the Research in Number Theory}
+}
+
 @article{KRT2024,
       title={Douglas-Rudin approximation theorem for operator-valued functions on the unit ball of $\mathbb{C}^d$}, 
       author={Poornendu Kumar and Shubham Rastogi and Raghavendra Tripathi},
       year={2024},
       eprint={2403.16401},
-      journal={arXiv:2403.16401}
+      journal={To appear in the Journal of Functional Analysis}
 }
 
 
@@ -56,8 +64,12 @@
 @article{ottolini2023central, 
 title={Central limit theorem in complete feedback games}, 
 DOI={10.1017/jpr.2023.64}, 
-journal={Journal of Applied Probability}, publisher={Cambridge University Press}, 
-author={Ottolini, Andrea and Tripathi, Raghavendra}, year={2023}, pages={1–13}}
+journal={Journal of Applied Probability}, 
+publisher={Cambridge University Press}, 
+author={Ottolini, Andrea and Tripathi, Raghavendra}, 
+year={2023}, 
+pages={1–13}
+}
 
 @article{dudarov2023image,
   title={On the image of graph distance matrices},
