--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,19 +1,26 @@
-
-@article{KRT2024,
-      title={On log-concavity of the number of orbits in commuting tuples of permutations}, 
-      author={Raghavendra Tripathi},
-      year={2024},
-      journal={To appear in the Research in Number Theory}
+@article{tripathi2024log,
+  title={On log-concavity of the number of orbits in commuting tuples of permutations},
+  author={Tripathi, Raghavendra},
+  journal={Research in Number Theory},
+  volume={10},
+  number={4},
+  pages={1--9},
+  year={2024},
+  publisher={Springer}
 }
 
 @article{KRT2024,
-      title={Douglas-Rudin approximation theorem for operator-valued functions on the unit ball of $\mathbb{C}^d$}, 
-      author={Poornendu Kumar and Shubham Rastogi and Raghavendra Tripathi},
-      year={2024},
-      eprint={2403.16401},
-      journal={To appear in the Journal of Functional Analysis}
+title = {Douglas-Rudin approximation theorem for operator-valued functions on the unit ball of Cd},
+journal = {Journal of Functional Analysis},
+volume = {288},
+number = {1},
+pages = {110685},
+year = {2024},
+issn = {0022-1236},
+doi = {https://doi.org/10.1016/j.jfa.2024.110685},
+url = {https://www.sciencedirect.com/science/article/pii/S0022123624003732},
+author = {Poornendu Kumar and Shubham Rastogi and Raghavendra Tripathi},
 }
-
 
 
 @article{tripathi2023two,
