Updates Talks and Papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,11 @@
+@article{tripathi2024some,
+  title={Some observations on Erd$\backslash$H $\{$o$\}$ s matrices},
+  author={Tripathi, Raghavendra},
+  journal={arXiv preprint arXiv:2410.06612},
+  year={2024}
+}
+
+
 @article{tripathi2024log,
   title={On log-concavity of the number of orbits in commuting tuples of permutations},
   author={Tripathi, Raghavendra},
