Changed paper details

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,8 @@
 @article{tripathi2024some,
   title={Some observations on Erd$\backslash$H $\{$o$\}$ s matrices},
-  author={Tripathi, Raghavendra},
-  journal={arXiv preprint arXiv:2410.06612},
+  author={Raghavendra Tripathi},
+  journal={Accepted in Linear Algebra and Its Applications},
+ url={arXiv:2410.06612},
   year={2024}
 }
 
