Add new articles to bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,113 +3,149 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{bouthat2025number,
+  title={Number of orbits of $ k $-subsets of permutations},
+  author={Bouthat, Ludovick and Tripathi, Raghavendra},
+  journal={arXiv preprint arXiv:2508.07463},
+  year={2025}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+
+@article{santos2025khintchine,
+  title={Khintchine inequalities, trace monoids and Tur\'an-type problems},
+  author={Santos, Patrick Oliveira and Tripathi, Raghavendra and Youssef, Pierre},
+  journal={arXiv preprint arXiv:2506.02517},
+  year={2025}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+
+@article{kushwaha2025note,
+       author = {Aman Kushwaha  and Raghavendra Tripathi},
+        title = {A note on Erd{\H{o}}s matrices and {M}arcus--{R}ee inequality},
+      journal = {Linear Algebra and Its Applications},
+      volume ={725},
+      pages={223-247},
+        year = {2025}, 
+         publisher={Elsevier}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{borkar2025small,
+  title={Small noise limits of {M}arkov chains and the {P}age{R}ank},
+  author={Borkar, Vivek S and Sowmya, S and Tripathi, Raghavendra},
+  journal={arXiv preprint arXiv:2503.05137},
+  year={2025}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+
+
+
+@article{tripathi2024some,
+  title={Some observations on Erd{\H{o}}s matrices},
+  author={Tripathi, Raghavendra},
+  journal={Linear Algebra and its Applications},
+  volume={708},
+  pages={236--251},
+  year={2025},
+  publisher={Elsevier}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+@article{tripathi2024log,
+  title={On log-concavity of the number of orbits in commuting tuples of permutations},
+  author={Tripathi, Raghavendra},
+  journal={Research in Number Theory},
+  volume={10},
+  number={4},
+  pages={1--9},
+  year={2024},
+  publisher={Springer}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{KRT2024,
+title = {Douglas-Rudin approximation theorem for operator-valued functions on the unit ball of Cd},
+journal = {Journal of Functional Analysis},
+volume = {288},
+number = {1},
+pages = {110685},
+year = {2024},
+issn = {0022-1236},
+doi = {https://doi.org/10.1016/j.jfa.2024.110685},
+url = {https://www.sciencedirect.com/science/article/pii/S0022123624003732},
+author = {Poornendu Kumar and Shubham Rastogi and Raghavendra Tripathi},
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+
+@article{tripathi2023two,
+  title={Two-color exchangeability does not imply exchangeability},
+  author={Tripathi,  Raghavendra},
+  journal={arXiv preprint arXiv:2310.01750},
+  year={2023}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{athreya2023path,
+      title={Path convergence of Markov chains on large graphs}, 
+      author={Siva Athreya and Soumik Pal and Raghav Somani and Raghavendra Tripathi},
+      year={2023},
+      eprint={2308.09214},
+      journal={arXiv:2308.09214},
 }
+
+
+@article{oh2021gradient,
+  title={Gradient flows on graphons: existence, convergence, continuity equations},
+  author={Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi, Raghavendra},
+  journal={Journal of Theoretical Probability},
+  pages={1--54},
+  year={2023},
+  publisher={Springer}
+}
+
+@article{harchaoui2022stochastic,
+  title={Stochastic optimization on matrices and a graphon McKean-Vlasov limit},
+  author={Harchaoui, Zaid and Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi,  Raghavendra},
+  journal={arXiv preprint arXiv:2210.00422},
+  year={2022}
+}
+
+
+@article{korssjoen2022finding,
+  title={Finding structure in sequences of real numbers via graph theory: a problem list},
+  author={Korssjoen, Dana G and Li, Biyao and Steinerberger, Stefan and Tripathi, Raghavendra and Zhang, Ruimin},
+  journal={Involve, A Journal of Mathematics},
+  volume={15},
+  number={2},
+  pages={251--270},
+  year={2022},
+  publisher={Mathematical Sciences Publishers}
+}
+
+
+@article{ottolini2023central, 
+title={Central limit theorem in complete feedback games}, 
+DOI={10.1017/jpr.2023.64}, 
+journal={Journal of Applied Probability}, 
+publisher={Cambridge University Press}, 
+author={Ottolini, Andrea and Tripathi, Raghavendra}, 
+year={2023}, 
+pages={1–13}
+}
+
+@article{dudarov2023image,
+  title={On the image of graph distance matrices},
+  author={Dudarov, William and Feinberg, Noah and Guo, Raymond and Goh, Ansel and Ottolini,  Andrea and Stepin,  Alicia and Tripathi, Raghavendra and Zhang, Joia},
+  journal={arXiv preprint arXiv:2307.04740},
+  year={2023}
+}
+
+@article{sharma2015extension,
+  title={Extension of the Josephus problem with varying elimination steps},
+  author={Sharma, Shivam and Tripathi, Raghavendra and Bagai, Shobha and Saini, Rajat and Sharma, Natasha},
+  journal={DU Journal of Undergraduate Research and Innovation},
+  volume={1},
+  number={3},
+  pages={211--218},
+  year={2015}
+}
+
+
