--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,3 @@
----
----
-
-@string{aps = {American Physical Society,}}
 
 @article{bouthat2025number,
   title={Number of orbits of $ k $-subsets of permutations},
@@ -104,7 +100,7 @@ author = {Poornendu Kumar and Shubham Rastogi and Raghavendra Tripathi},
 @article{harchaoui2022stochastic,
   title={Stochastic optimization on matrices and a graphon McKean-Vlasov limit},
   author={Harchaoui, Zaid and Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi,  Raghavendra},
-  journal={arXiv preprint arXiv:2210.00422},
+  journal={To appear in Annals of Applied Probability},
   year={2022}
 }
 
