Deleted some unnecessary files. Changed bib file according to mathscinet.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,15 +14,27 @@
   year={2025}
 }
 
+@article{harchaoui2022stochastic,
+  title={Stochastic optimization on matrices and a graphon McKean-Vlasov limit},
+  author={Harchaoui, Zaid and Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi,  Raghavendra},
+  journal={To appear in Annals of Applied Probability},
+  year={2025}
+}
 
-@article{kushwaha2025note,
-       author = {Aman Kushwaha  and Raghavendra Tripathi},
-        title = {A note on Erd{\H{o}}s matrices and {M}arcus--{R}ee inequality},
-      journal = {Linear Algebra and Its Applications},
-      volume ={725},
-      pages={223-247},
-        year = {2025}, 
-         publisher={Elsevier}
+
+@article {MR4933788,
+    AUTHOR = {Kushwaha, Aman and Tripathi, Raghavendra},
+     TITLE = {A note on {E}rd\H os matrices and {M}arcus-{R}ee inequality},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {725},
+      YEAR = {2025},
+     PAGES = {223--247},
+      ISSN = {0024-3795,1873-1856},
+   MRCLASS = {15B51 (15A45 15A80)},
+  MRNUMBER = {4933788},
+       DOI = {10.1016/j.laa.2025.07.012},
+       URL = {https://doi.org/10.1016/j.laa.2025.07.012},
 }
 
 @article{borkar2025small,
@@ -36,39 +48,57 @@
 
 
 
-@article{tripathi2024some,
-  title={Some observations on Erd{\H{o}}s matrices},
-  author={Tripathi, Raghavendra},
-  journal={Linear Algebra and its Applications},
-  volume={708},
-  pages={236--251},
-  year={2025},
-  publisher={Elsevier}
+@article {MR4840450,
+    AUTHOR = {Tripathi, Raghavendra},
+     TITLE = {Some observations on {E}rd\H os matrices},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {708},
+      YEAR = {2025},
+     PAGES = {236--251},
+      ISSN = {0024-3795,1873-1856},
+   MRCLASS = {15A15 (15A45 15B36 15B51)},
+  MRNUMBER = {4840450},
+MRREVIEWER = {Fr\'ed\'eric\ Morneau-Gu\'erin},
+       DOI = {10.1016/j.laa.2024.12.002},
+       URL = {https://doi.org/10.1016/j.laa.2024.12.002},
 }
 
 
-@article{tripathi2024log,
-  title={On log-concavity of the number of orbits in commuting tuples of permutations},
-  author={Tripathi, Raghavendra},
-  journal={Research in Number Theory},
-  volume={10},
-  number={4},
-  pages={1--9},
-  year={2024},
-  publisher={Springer}
+@article {MR4798164,
+    AUTHOR = {Tripathi, Raghavendra},
+     TITLE = {On log-concavity of the number of orbits in commuting tuples
+              of permutations},
+   JOURNAL = {Res. Number Theory},
+  FJOURNAL = {Research in Number Theory},
+    VOLUME = {10},
+      YEAR = {2024},
+    NUMBER = {4},
+     PAGES = {Paper No. 78, 9},
+      ISSN = {2522-0160,2363-9555},
+   MRCLASS = {05A17 (05A05)},
+  MRNUMBER = {4798164},
+       DOI = {10.1007/s40993-024-00571-0},
+       URL = {https://doi.org/10.1007/s40993-024-00571-0},
 }
 
-@article{KRT2024,
-title = {Douglas-Rudin approximation theorem for operator-valued functions on the unit ball of Cd},
-journal = {Journal of Functional Analysis},
-volume = {288},
-number = {1},
-pages = {110685},
-year = {2024},
-issn = {0022-1236},
-doi = {https://doi.org/10.1016/j.jfa.2024.110685},
-url = {https://www.sciencedirect.com/science/article/pii/S0022123624003732},
-author = {Poornendu Kumar and Shubham Rastogi and Raghavendra Tripathi},
+@article {MR4799319,
+    AUTHOR = {Kumar, Poornendu and Rastogi, Shubham and Tripathi,
+              Raghavendra},
+     TITLE = {Douglas-{R}udin approximation theorem for operator-valued
+              functions on the unit ball of {$\Bbb C^d$}},
+   JOURNAL = {J. Funct. Anal.},
+  FJOURNAL = {Journal of Functional Analysis},
+    VOLUME = {288},
+      YEAR = {2025},
+    NUMBER = {1},
+     PAGES = {Paper No. 110685, 14},
+      ISSN = {0022-1236,1096-0783},
+   MRCLASS = {46E40 (30J05 32A99)},
+  MRNUMBER = {4799319},
+MRREVIEWER = {Jiaqi\ Ni},
+       DOI = {10.1016/j.jfa.2024.110685},
+       URL = {https://doi.org/10.1016/j.jfa.2024.110685},
 }
 
 
@@ -88,26 +118,55 @@ author = {Poornendu Kumar and Shubham Rastogi and Raghavendra Tripathi},
 }
 
 
-@article{oh2021gradient,
-  title={Gradient flows on graphons: existence, convergence, continuity equations},
-  author={Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi, Raghavendra},
-  journal={Journal of Theoretical Probability},
-  pages={1--54},
-  year={2023},
-  publisher={Springer}
+@article {MR4751299,
+    AUTHOR = {Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi,
+              Raghavendra},
+     TITLE = {Gradient flows on graphons: existence, convergence, continuity
+              equations},
+   JOURNAL = {J. Theoret. Probab.},
+  FJOURNAL = {Journal of Theoretical Probability},
+    VOLUME = {37},
+      YEAR = {2024},
+    NUMBER = {2},
+     PAGES = {1469--1522},
+      ISSN = {0894-9840,1572-9230},
+   MRCLASS = {05C80 (05C60 60K35 68T07)},
+  MRNUMBER = {4751299},
+MRREVIEWER = {Mei\ Yin},
+       DOI = {10.1007/s10959-023-01271-8},
+       URL = {https://doi.org/10.1007/s10959-023-01271-8},
 }
 
-@article{harchaoui2022stochastic,
-  title={Stochastic optimization on matrices and a graphon McKean-Vlasov limit},
-  author={Harchaoui, Zaid and Oh, Sewoong and Pal, Soumik and Somani, Raghav and Tripathi,  Raghavendra},
-  journal={To appear in Annals of Applied Probability},
-  year={2022}
+
+@article {MR4740956,
+    AUTHOR = {Ottolini, Andrea and Tripathi, Raghavendra},
+     TITLE = {Central limit theorem in complete feedback games},
+   JOURNAL = {J. Appl. Probab.},
+  FJOURNAL = {Journal of Applied Probability},
+    VOLUME = {61},
+      YEAR = {2024},
+    NUMBER = {2},
+     PAGES = {654--666},
+      ISSN = {0021-9002,1475-6072},
+   MRCLASS = {60F05 (60G70 91A60)},
+  MRNUMBER = {4740956},
+MRREVIEWER = {Lina\ Mallozzi},
+       DOI = {10.1017/jpr.2023.64},
+       URL = {https://doi.org/10.1017/jpr.2023.64},
+}
+
+@article{dudarov2023image,
+  title={On the image of graph distance matrices},
+  author={Dudarov, William and Feinberg, Noah and Guo, Raymond and Goh, Ansel and Ottolini,  Andrea and Stepin,  Alicia and Tripathi, Raghavendra and Zhang, Joia},
+  journal={arXiv preprint arXiv:2307.04740},
+  year={2023}
 }
 
 
 @article{korssjoen2022finding,
   title={Finding structure in sequences of real numbers via graph theory: a problem list},
   author={Korssjoen, Dana G and Li, Biyao and Steinerberger, Stefan and Tripathi, Raghavendra and Zhang, Ruimin},
+  DOI ={10.2140/involve.2022.15.251},
   journal={Involve, A Journal of Mathematics},
   volume={15},
   number={2},
@@ -117,22 +176,7 @@ author = {Poornendu Kumar and Shubham Rastogi and Raghavendra Tripathi},
 }
 
 
-@article{ottolini2023central, 
-title={Central limit theorem in complete feedback games}, 
-DOI={10.1017/jpr.2023.64}, 
-journal={Journal of Applied Probability}, 
-publisher={Cambridge University Press}, 
-author={Ottolini, Andrea and Tripathi, Raghavendra}, 
-year={2023}, 
-pages={1–13}
-}
 
-@article{dudarov2023image,
-  title={On the image of graph distance matrices},
-  author={Dudarov, William and Feinberg, Noah and Guo, Raymond and Goh, Ansel and Ottolini,  Andrea and Stepin,  Alicia and Tripathi, Raghavendra and Zhang, Joia},
-  journal={arXiv preprint arXiv:2307.04740},
-  year={2023}
-}
 
 @article{sharma2015extension,
   title={Extension of the Josephus problem with varying elimination steps},
