--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,12 @@
 
+@article{Trpathi26Position, 
+title = {On the position matrix of single-shelf shuffle and card guessing}, 
+author={Tripathi, raghavendra}, 
+year={2026}
+}
+
 @article{bouthat2025number,
-  title={Number of orbits of $ k $-subsets of permutations},
+  title={Number of orbits of $k$-subsets of permutations},
   author={Bouthat, Ludovick and Tripathi, Raghavendra},
   journal={arXiv preprint arXiv:2508.07463},
   year={2025}
